# arbitrage_cex_calculator

./: .gitignore  :w  Cargo.toml  README.md
docs/: F64_VS_U64.md  LOW_LATENCY_ROADMAP.md  STRATEGIC_NEXT_STEPS.md  TIMESTAMPS_FOR_LOW_LATENCY.md  TIMESTAMP_BEST_PRACTICES.md
src/: main.rs  main.rs:w  util.rs
src/api/: binance.rs  coinbase.rs  kraken.rs  mod.rs
src/orderbook/: book.rs  mod.rs  modifications.rs
