[package]
name = "security_flamegraph_lowlatency"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Order book dependencies
crossbeam-queue = "0.3"
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
# pricelevel - Update this with the correct path or git URL
# Examples:
# pricelevel = { path = "../pricelevel" }  # If local crate
# pricelevel = { git = "https://github.com/user/pricelevel" }  # If git dependency
# pricelevel = "0.1"  # If on crates.io
pricelevel = { path = "../pricelevel" }  # TODO: Update with correct path

[profile.release]
lto = true
codegen-units = 1